# devfest_rag

./: README.md  data_preparation.ipynb  langchain_example.ipynb  pyproject.toml
data/metadata/: metadata.jsonl
util/: agent_builder.py  helper.py
